--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: saf_by
+name: house_rent
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -32,13 +32,18 @@ dependencies:
   android_intent: ^0.3.7+7
   validators: ^2.0.1
 
+
 dev_dependencies:
+  flutter_launcher_icons: ^0.7.4
   flutter_test:
     sdk: flutter
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
+flutter_icons:
+    android: "launcher_icon"
+    ios: true
+    image_path: "assets/app_icon/app_icon.png"
 # The following section is specific to Flutter.
 flutter:
 
@@ -51,6 +56,7 @@ flutter:
   assets:
     - assets/icons/
     - assets/images/
+    - assets/app_icon/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
